# Advent-Of-Code

./: .gitignore  Cargo.toml
2015/rust/: Cargo.toml
2015/rust/inputs/day_12/: test_array.txt  test_object.txt
2015/rust/inputs/day_8/: test.txt
2015/rust/src/: day_11.rs  day_13.rs  day_15.rs  day_16.rs  day_17.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_3.rs  day_5.rs  day_8.rs  lib.rs
2023/go/cmd/run/: days_import.go  main.go
2023/go/internal/aoc/: must.go  registry.go
2023/go/internal/days/day01/: day01.go  day01_test.go
2023/go/internal/days/day02/: day02.go  day02_test.go  main.go
2023/go/internal/days/day03/: day03.go  day03_test.go  main.go
2023/go/internal/days/day04/: day04.go  day04_test.go  main.go
2023/go/internal/days/day05/: main.go
2023/go/internal/days/day06/: day06.go
2023/go/internal/days/day07/: day07.go
2023/go/internal/days/day08/: day08.go
2024/c/: Makefile
2024/c/lib/: utilities.c  utilities.h  vector.c  vector.h
2024/c/src/: day_1.c  day_10.c  day_11.c  day_12.c  day_2.c  day_3.c  day_4.c  day_5.c  day_6.c  day_7.c  day_8.c  day_9.c
2025/c/: Makefile
2025/c/lib/: argument_reader.c  argument_reader.h  map.c  map.h  string.c  string.h  utilities.c  utilities.h
2025/c/src/: day_01.c  day_02.c  day_03.c  day_04.c  day_05.c  day_06.c  day_07.c  main.c  solution.c  solution.h
src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_14.rs  day_18.rs  day_2.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  lib.rs
