[package]
name = "aoc_2015"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc"
path = "src/lib.rs"
test = true

[[bin]]
name = "day_1"
path = "src/day_1.rs"
test = true

[[bin]]
name = "day_2"
path = "src/day_2.rs"
test = true

[[bin]]
name = "day_3"
path = "src/day_3.rs"
test = true

[[bin]]
name = "day_4"
path = "src/day_4.rs"
test = true

[[bin]]
name = "day_5"
path = "src/day_5.rs"
test = true

[[bin]]
name = "day_6"
path = "src/day_6.rs"
test = true

[[bin]]
name = "day_7"
path = "src/day_7.rs"
test = true

[[bin]]
name = "day_8"
path = "src/day_8.rs"
test = true

[[bin]]
name = "day_9"
path = "src/day_9.rs"
test = true

[[bin]]
name = "day_10"
path = "src/day_10.rs"
test = true

[[bin]]
name = "day_11"
path = "src/day_11.rs"
test = true

[[bin]]
name = "day_12"
path = "src/day_12.rs"
test = true

[[bin]]
name = "day_13"
path = "src/day_13.rs"
test = true

[[bin]]
name = "day_14"
path = "src/day_14.rs"
test = true

[dependencies]
md5 = "0.7.0"

